--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                 <div class="images text-center">
                   <div class="img-avatar-alpha">
                     <div class="img-1 shadow">
-                      <a href="item.html">
+                      <a href="#">
                         <img class="img" src="img/items/img-people1-square.jpg" alt="Image">
                       </a>
                     </div>
@@ -220,7 +220,7 @@
                 <div class="images text-center">
                   <div class="img-avatar-alpha">
                     <div class="img-1 shadow">
-                      <a href="item.html">
+                      <a href="#">
                         <img class="img" src="img/items/img-people2-square.jpg" alt="Image">
                       </a>
                     </div>
@@ -238,7 +238,7 @@
                 <div class="images text-center">
                   <div class="img-avatar-alpha">
                     <div class="img-1 shadow">
-                      <a href="item.html">
+                      <a href="#">
                         <img class="img" src="img/items/img-people3-square.jpg" alt="Image">
                       </a>
                     </div>
